f2: fix quote content's overflow

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -34,16 +34,6 @@ p {
   color: $black-deep;
 }
 
-
-/* FIXME */
-
-pre {}
-
-code {
-  padding: 0.2rem 0.6rem;
-  background-color: $grey;
-}
-
 a {
   word-break: break-word;
   text-decoration: none;
@@ -60,4 +50,13 @@ h4,
 h5,
 h6 {
   font-weight: normal;
+}
+
+code {
+  padding: 0.2rem 0.6rem;
+  background-color: $grey;
+}
+
+figure{
+  overflow: auto;
 }
